--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,19 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-</resources>
+
+    <color name="black">#2c2d2e</color>
+    <color name="grey">#909499</color>
+    <color name="white">#ffffff</color>
+    <color name="cool_blue">#4680c2</color>
+    <color name="sun_yellow">#ffcc33</color>
+    <color name="orangish">#ff7733</color>
+    <color name="mid_green">#47b347</color>
+    <color name="reddish_pink">#ff3355</color>
+    <color name="berry">#990f6b</color>
+    <color name="light_lavendar">#f8a6ff</color>
+    <color name="dark_periwinkle">#6c6cd9</color>
+    <color name="cornflower_blue_two">#528bcc</color>
+    <color name="cornflower_blue">#5692d7</color>
+
+    </resources>
