--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,6 @@
     <color name="cornflower_blue_two">#528bcc</color>
     <color name="cornflower_blue">#5692d7</color>
 
+    <color name="cornflower_blue_two_a48">#48528bcc</color>
+
     </resources>
