--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -91,12 +91,21 @@
         android:layout_above="@+id/bottom_bar"
         android:layout_below="@+id/toolbar">
 
+        <ImageView
 
-        <TextView
+android:src="@mipmap/bg_stars_center"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/background_view"
+            android:scaleType="centerCrop"
+            />
+
+        <EditText
             style="@style/TextStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
+            android:background="@null"
             android:id="@+id/text_view"
             android:fontFamily="sans-serif"
             android:gravity="center_horizontal"
