--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,7 +17,9 @@
     <color name="dark_periwinkle">#6c6cd9</color>
     <color name="cornflower_blue_two">#528bcc</color>
     <color name="cornflower_blue">#5692d7</color>
-
+    <color name="aqua_marine">#30f3d2</color>
+    <color name="gradient_blue">#2e7ae6</color>
+<color name="sickly_yellow">#cbe645</color>
     <color name="cornflower_blue_two_a48">#48528bcc</color>
 
     </resources>
