--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -106,12 +106,15 @@ android:src="@mipmap/bg_stars_center"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:background="@null"
+            android:shadowColor="#1e000000"
+            android:shadowDy="0.5"
+            android:text="hdjhsjd"
             android:id="@+id/text_view"
             android:fontFamily="sans-serif"
             android:gravity="center_horizontal"
             android:hint="@string/what_is_new"
             android:lineSpacingExtra="6sp"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="24sp"
             android:textStyle="bold" />
 
