--- a/app/src/main/res/drawable/send_button_fon.xml
+++ b/app/src/main/res/drawable/send_button_fon.xml
@@ -10,7 +10,7 @@
 
     </item>
 
-    <item android:state_enabled="false">
+    <item >
         <shape android:shape="rectangle">
 
             <solid android:color="@color/cornflower_blue_two" />
