--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -101,8 +101,7 @@
         <RelativeLayout
             android:id="@+id/content"
             android:layout_width="match_parent"
-            android:layout_height="360dp"
-            android:layout_centerVertical="true">
+            android:layout_height="360dp">
 
             <ImageView
 
