--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/white"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
@@ -155,7 +156,8 @@
             android:layout_height="56dp"
             android:orientation="horizontal">
 
-            <RelativeLayout
+            <LinearLayout
+                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="0.4"
@@ -164,9 +166,10 @@
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/thumbnails_list"
                     android:layout_width="match_parent"
+                    android:layout_gravity="center_vertical"
                     android:layout_height="wrap_content"
                     tools:listitem="@layout/item_thumbnail" />
-            </RelativeLayout>
+            </LinearLayout>
 
             <View
                 android:layout_width="0.5dp"
