--- a/app/src/main/res/layout/item_thumbnail.xml
+++ b/app/src/main/res/layout/item_thumbnail.xml
@@ -1,16 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:gravity="center"
+    android:layout_marginLeft="6dp"
+    android:layout_marginStart="6dp"
+    android:layout_marginEnd="6dp"
+    android:layout_marginRight="6dp"
+    android:layout_marginTop="12dp"
+    android:layout_marginBottom="12dp"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
     
     <com.nandy.vkchanllenge.CheckableImageButton
-        android:layout_margin="6dp"
         android:id="@+id/thumbnail_view"
         android:background="@drawable/checkable_image_selector"
         android:src="@mipmap/thumb_stars"
         android:layout_width="32dp"
         android:layout_height="32dp" />
 
-</RelativeLayout>
+</LinearLayout>
