--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#528bcc</color>
+    <color name="colorPrimary">#ffffff</color>
     <color name="colorPrimaryDark">#6c6cd9</color>
-    <color name="colorAccent">#ffffff</color>
+    <color name="colorAccent">#528bcc</color>
 
     <color name="black">#2c2d2e</color>
     <color name="grey">#909499</color>
+    <color name="grey_light">#ebebeb</color>
     <color name="white">#ffffff</color>
     <color name="cool_blue">#4680c2</color>
     <color name="sun_yellow">#ffcc33</color>
@@ -21,6 +22,7 @@
     <color name="gradient_blue">#2e7ae6</color>
     <color name="sickly_yellow">#cbe645</color>
     <color name="cornflower_blue_two_a48">#48528bcc</color>
+    <color name="cornflower_blue_two_a24">#24528bcc</color>
     <color name="black_a24">#242c2d2e</color>
     <color name="highlight">#5cffffff</color>
     <color name="transparent">#00ffffff</color>
