--- a/app/src/main/res/layout/item_image.xml
+++ b/app/src/main/res/layout/item_image.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="78dp"
+    android:layout_width="wrap_content"
     android:gravity="center"
-    android:layout_height="78dp">
+    android:layout_height="wrap_content">
 
-    <ImageView
+    <com.nandy.vkchanllenge.CheckableImageButton
         android:contentDescription="@string/sticker"
-        android:layout_width="wrap_content"
+        android:layout_margin="4dp"
+        android:layout_width="84dp"
         android:src="@mipmap/bg_stars_center"
-        android:layout_height="wrap_content"
+        android:layout_height="84dp"
         android:id="@+id/image"/>
 
 
