ImagesList: rounded transformation

--- a/app/src/main/res/layout/item_image.xml
+++ b/app/src/main/res/layout/item_image.xml
@@ -4,7 +4,7 @@
     android:gravity="center"
     android:layout_height="wrap_content">
 
-    <com.nandy.vkchanllenge.CheckableImageButton
+    <ImageView
         android:contentDescription="@string/sticker"
         android:layout_margin="4dp"
         android:layout_width="84dp"
