--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -118,6 +118,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
+                android:inputType="textMultiLine|textVisiblePassword|textNoSuggestions"
                 android:layout_margin="24dp"
                 android:background="@null"
                 android:hint="@string/what_is_new"
