--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -122,6 +122,7 @@
                 android:layout_margin="24dp"
                 android:background="@null"
                 android:hint="@string/what_is_new"
+                android:descendantFocusability="blocksDescendants"
                 android:paddingBottom="15dp"
                 android:paddingEnd="5dp"
                 android:paddingLeft="5dp"
@@ -152,7 +153,7 @@
             android:alpha="0.12"
             android:background="@color/black" />
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="56dp"
             android:orientation="horizontal">
@@ -161,7 +162,8 @@
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="0.4"
+                android:layout_toLeftOf="@+id/delimiter"
+                android:layout_toStartOf="@id/delimiter"
                 android:gravity="center_vertical">
 
                 <android.support.v7.widget.RecyclerView
@@ -175,25 +177,30 @@
             <View
                 android:layout_width="0.5dp"
                 android:layout_height="match_parent"
+                android:id="@+id/delimiter"
                 android:alpha="0.12"
+                android:layout_toLeftOf="@+id/btn_send"
+                android:layout_toStartOf="@+id/btn_send"
                 android:background="@color/black" />
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="0.6"
-                android:gravity="center">
 
                 <TextView
                     android:id="@+id/btn_send"
-                    android:layout_width="wrap_content"
+                    android:layout_width="111dp"
                     android:layout_height="32dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
                     android:background="@drawable/send_button_fon"
                     android:fontFamily="sans-serif-medium"
                     android:gravity="center"
                     android:letterSpacing="0.04"
                     android:paddingEnd="16dp"
                     android:paddingLeft="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_centerVertical="true"
                     android:paddingRight="16dp"
                     android:paddingStart="16dp"
                     android:text="@string/send"
@@ -201,12 +208,16 @@
                     android:textSize="13sp"
                     android:textStyle="normal" />
 
-            </RelativeLayout>
 
 
-        </LinearLayout>
+        </RelativeLayout>
 
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:alpha="0.12"
+            android:background="@color/black" />
 
     </LinearLayout>
 
