--- a/app/src/main/res/layout/popup_backgrounds.xml
+++ b/app/src/main/res/layout/popup_backgrounds.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
+    android:layout_gravity="center_vertical"
     android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -9,10 +10,13 @@
     <RelativeLayout
         android:layout_width="wrap_content"
         android:id="@+id/layout_images"
-        android:layout_height="208dp">
+        android:gravity="center_vertical"
+        android:layout_height="match_parent">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/images_list"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="12dp"
             android:layout_width="match_parent"
             android:layout_gravity="center_vertical"
             android:layout_height="wrap_content"
