--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#ffffff</color>
-    <color name="colorPrimaryDark">#6c6cd9</color>
-    <color name="colorAccent">#528bcc</color>
+    <color name="colorPrimaryDark">#528bcc</color>
+    <color name="colorAccent">#5692d7</color>
 
     <color name="black">#2c2d2e</color>
     <color name="grey">#909499</color>
