--- a/app/src/main/res/layout/fragment_sending.xml
+++ b/app/src/main/res/layout/fragment_sending.xml
@@ -14,18 +14,19 @@
         android:layout_centerInParent="true"
         android:gravity="center">
 
-        <ImageView
-            android:id="@+id/image"
-            android:src="@drawable/ic_success"
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyle"
             android:layout_marginBottom="16dp"
             android:layout_width="48dp"
+            android:indeterminateTint="@color/cornflower_blue_two"
             android:layout_height="48dp"/>
 
         <TextView
             android:layout_width="wrap_content"
-            android:text="@string/published"
+            android:text="@string/publishing"
             style="@style/TextStyle6"
-            android:id="@+id/message"
+
             android:layout_height="wrap_content" />
 
     </LinearLayout>
@@ -33,12 +34,12 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_margin="16dp"
-        android:text="@string/create_more"
-        style="@style/TextStyle"
-        android:id="@+id/create"
+        android:text="@string/cancel"
+        style="@style/TextStyle7"
+        android:id="@+id/cancel"
         android:gravity="center"
         android:textAllCaps="true"
-        android:background="@drawable/fon_blue"
+        android:background="@drawable/fon_blue_transparent"
         android:layout_alignParentBottom="true"
         android:layout_height="48dp" />
 
