Enable/Disable send button

--- a/app/src/main/res/drawable/login_btn_fon.xml
+++ b/app/src/main/res/drawable/login_btn_fon.xml
@@ -4,7 +4,7 @@
     <item>
         <shape android:shape="rectangle">
 
-            <solid android:color="#24ffffff" />
+            <solid android:color="@color/white_a24" />
 
             <corners android:radius="4dp" />
         </shape>
