--- a/app/src/main/res/drawable/fon_blue_transparent.xml
+++ b/app/src/main/res/drawable/fon_blue_transparent.xml
@@ -4,7 +4,7 @@
     <item>
         <shape android:shape="rectangle">
 
-            <solid android:color="#24528bcc" />
+            <solid android:color="@color/cornflower_blue_two_a24" />
 
             <corners android:radius="4dp" />
         </shape>
